clang/test/BSC/Negative/Ownership/Borrow/short_life_borrow/short_life_borrow.cbs
// RUN: %clang_cc1 -verify %s

void use_mut(int *_Borrow p);
void test1(int *_Borrow p) {
  {
    int local1 = 42;
    p = &_Mut local1; // expected-error {{`local1` does not live long enough}}
  } // expected-note {{`local1` dropped here while still borrowed}}
  use_mut(p);
}